chore(deps): Update ClickHouse, Docker, Grafana, Zookeeper, LLVM

--- a/.project_automation/static_tests/Dockerfile
+++ b/.project_automation/static_tests/Dockerfile
@@ -1,4 +1,7 @@
-FROM public.ecr.aws/codebuild/amazonlinux2-x86_64-standard:4.0
-RUN git clone https://github.com/aws-quickstart/qs-cfn-lint-rules.git /tmp/qs-cfn-lint-rules
-RUN cd /tmp/qs-cfn-lint-rules && git checkout 8268db9df3407ccf5383def635bc22e0f99d6b39 && pip install .
+FROM public.ecr.aws/codebuild/amazonlinux2-x86_64-standard:5.0
+RUN git clone https://github.com/aws-quickstart/qs-cfn-lint-rules.git /tmp/qs-cfn-lint-rules \
+ && cd /tmp/qs-cfn-lint-rules \
+ && git checkout 2e84337d96e56ee8aea2afa761709b334c2dddaf \
+ && pip3 install --no-cache-dir . \
+ && pip3 install --no-cache-dir cfn-lint==0.87.3
 #RUN cfn-lint -u
