--- a/.project_automation/functional_tests/Dockerfile
+++ b/.project_automation/functional_tests/Dockerfile
@@ -1,4 +1,8 @@
-FROM public.ecr.aws/codebuild/amazonlinux2-x86_64-standard:4.0
-RUN pip install taskcat yq
-RUN yum install -y yum-utils && yum-config-manager --add-repo https://cli.github.com/packages/rpm/gh-cli.repo && yum install -y gh
-RUN gem install asciidoctor
+FROM public.ecr.aws/codebuild/amazonlinux2-x86_64-standard:5.0
+RUN yum install -y yum-utils \
+ && yum-config-manager --add-repo https://cli.github.com/packages/rpm/gh-cli.repo  \
+ && yum remove -y yum-utils \
+ && yum install -y gh \
+ && yum -y clean all && rm -rf /var/cache \
+ && pip3 install --no-cache-dir taskcat yq \
+ && gem install asciidoctor
